# Copyright 2025 TerraPower, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#######################################################################
#                        GENERAL PYTHON CONFIG                        #
#######################################################################
[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "terrapower-dragon"
version = "0.1.3"
description = "ARMI plugin for lattice physics analysis with DRAGON."
license = {file = "LICENSE.md"}
requires-python = ">3.8"
readme = "README.rst"
authors = [
    { name="TerraPower, LLC", email="armi-devs@terrapower.com" },
]
dependencies = [
    "armi>=0.3.0",
    "jinja2<=3.0.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/terrapower/dragon-armi-plugin"
"Bug Tracker" = "https://github.com/terrapower/dragon-armi-plugin/issues"

[project.optional-dependencies]
test = [
    "black==22.6.0", # Code formatter (version-pinned)
    "pytest>=7.0.0", # Our primary test tooling
    "ruff==0.5.1", # Linting and code formatting (version-pinned)
]

[tool.black]
line-length = 88

[tool.setuptools.packages]
find = {}

#######################################################################
#              DATA FILES TO BE INCLUDED WITH THE PROJECT             #
#######################################################################
[tool.setuptools.package-data]
terrapower-dragon = [
    "resources/*",
    "resources/**/*"
]